# myschoolapp-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: probe_grades.py
src/myschoolapp_mcp/: __init__.py  auth.py  client.py  server.py
