[project]
name = "myschoolapp-mcp"
version = "0.1.0"
description = "MCP server for myschoolapp.com (Blackbaud K-12) using authenticated session cookies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "myschoolapp", "blackbaud", "claude", "school"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "playwright>=1.40",
    "python-dotenv>=1.0",
]

[project.scripts]
myschoolapp-mcp = "myschoolapp_mcp.server:main"
myschoolapp-mcp-refresh = "myschoolapp_mcp.auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myschoolapp_mcp"]
